--- a/web/templates/resultatfinal.html
+++ b/web/templates/resultatfinal.html
@@ -51,8 +51,11 @@
         <hr class="sidebar-divider my-0">
 
         <!-- Nav Item - Accueil -->
+        <form method="get" action="/" id="from_home">
+
+        </form>
         <li class="nav-item active">
-            <a class="nav-link">
+            <a type="submit" class="nav-link" href="#" onclick="home()">
                 <i class="fa fa-home" aria-hidden="true"></i>
                 <span>Accueil</span></a>
         </li>
